--- a/web/public/theme/default/index/style.css
+++ b/web/public/theme/default/index/style.css
@@ -1,9 +1,9 @@
 /*--------------------------------Ê×Ò³»ÃµÆÆ¬µÄÈÝÆ÷--------------------------------*/
 #SlidePictureContainer{
 	width:100%;
-	height:332px;
-	/*border:1px solid #ff0000;
-	background:url(SlidePicture1.jpg) no-repeat center; */
+	height:352px;
+	/* border:1px solid #ff0000; */
+	/*background:url(SlidePicture1.jpg) no-repeat center; */
 }
 
 
