1.一个是图片之前有空隙，加了一个属性解决的，这个属性以前不知道 2.一个是lefty和left的问题，为什么改了名字，就会出现number is not function

--- a/web/module/Cms/src/Cms/Component/Slide/Javascript/Template/Style1.phtml
+++ b/web/module/Cms/src/Cms/Component/Slide/Javascript/Template/Style1.phtml
@@ -1,5 +1,5 @@
 <div class="slide-javascript-control">
-	<a href="#" class="btn-previous" onmouseover="set_hover_on();" onmouseout="set_hover_off();"  onclick="scrollLeft(); return false;">&nbsp;</a> 
+	<a href="#" class="btn-previous" onmouseover="set_hover_on();" onmouseout="set_hover_off();"  onclick="scrollLefty(); return false;">&nbsp;</a> 
 	<a href="#" class="btn-next"     onmouseover="set_hover_on();" onmouseout="set_hover_off();"  onclick="scrollRight(); return false;">&nbsp;</a>
 	<?php if($this->showTag):?>
 		<span class="tag">&nbsp;</span> 
