--- a/web/public/component/article/column/style2/images/component.css
+++ b/web/public/component/article/column/style2/images/component.css
@@ -44,16 +44,18 @@
 .ArticleColumnItemMiddle ul.titleContainer{
 	margin:0px;
 	padding:0px;
-	
+	list-style-image:url(list-style-item.jpg);
+	list-style-position:inside;
 }
 .ArticleColumnItemMiddle ul.titleContainer li{
-	list-style:none;
 	height:30px;
 	line-height:30px;
 	font-size:13px;
 	text-align:left;
-	
+	border-bottom:1px dashed #797979;
 }
+
+
 .ArticleColumnItemMiddle ul.titleContainer li a{
 	color:#000000;
 }
@@ -63,6 +65,7 @@
 	line-height:40px;
 	font-size:16px;
 	font-weight:bolder;
+	border-bottom:none;
 }
 .ArticleColumnItemTitle{
 	float:left;
