添加一个友情链接的组件

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -62,12 +62,7 @@ $(document).ready(function(){
             <?php echo $this->content; ?>
         </div> <!-- mainer end -->
 		<div id='footer'>
-			<ul  id='footerTop'>
-   				<li  class='Item'><a href='#'>免责声明</a></li>
-   				<li  class='Item'><a href='#'>加入我们</a></li>
-   				<li  class='Item'><a href='#'>康润微博</a></li>
-   				<li  class='Item'><a href='#'>热线电话</a></li>
-   			</ul><!-- headerNavigation end -->
+			<?php echo $this->friendLinkViewModel;?>
 			<div id='footerBottom'>
 				Copyright &copy; 2012-2016&nbsp;康润律师事务所&nbsp;&nbsp;
 				<a href='http://www.miibeian.gov.cn' class='beian'>赣ICP备案xxxxxx号</a>
