完成版权文字的圆角图形

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -63,11 +63,18 @@ $(document).ready(function(){
         </div> <!-- mainer end -->
 		<div id='footer'>
 			<?php echo $this->friendLinkViewModel;?>
-			<div id='footerBottom'>
-				Copyright &copy; 2012-2016&nbsp;康润律师事务所&nbsp;&nbsp;
-				<a href='http://www.miibeian.gov.cn' class='beian'>赣ICP备案xxxxxx号</a>
-			</div><!-- footerBottom -->
-    	</div><!-- footer end  -->
+			<table id='copyright' cellspacing='0' cellpadding='0' border='0'>
+				<tr>
+					<td  width='14' class='first'>&nbsp;</td>
+					<td width='240'> &nbsp;</td>
+					<td width='160'>Copyright &copy; 2012-2016</td>
+					<td width='140'>康润律师事务所</td>
+					<td width='140'><a href='http://www.miibeian.gov.cn' class='beian'>赣ICP备案xxxxxx号</a></td>
+					<td>&nbsp;</td>
+					<td  width='15' class='last'>&nbsp;</td>
+				</tr>
+			</table>
+		</div><!-- footer end  -->
 	</div><!-- AllContainer end  -->
 </div><!-- wrap end  -->
 </body>
