--- a/web/public/component/article/list-control/style1/images/component.css
+++ b/web/public/component/article/list-control/style1/images/component.css
@@ -1,10 +1,17 @@
-ul.article-list-control{
-	margin:10px;
+div.article-list-control{
+	width:95%;
+	/* border:1px solid #ff0000; */
+	margin:0px 10px;
+}
+
+ul.article-list-ul{
+	margin:0px;
+	padding:0px;
 	list-style-type:disc;
 	list-style-position:inside;
 }
 
-ul.article-list-control li{
+ul.article-list-ul li{
 	height:26px;
 	line-height:26px;
 	border-bottom:1px dashed #C0C0C0;
@@ -14,11 +21,84 @@ ul.article-list-control li{
 	
 }
 
-ul.article-list-control li a{
+ul.article-list-ul li a{
 	color:#000000
 }
 
-ul.article-list-control li span.date{
+ul.article-list-ul li span.date{
 	float:right;
 	margin-right:10px;
+}
+
+
+/*列表组件中换页控件的样式*/
+.pagination {
+    height:40px;
+    margin:20px 0
+}
+
+.pagination a {
+    color: #000000;
+    cursor: pointer;
+}
+
+.pagination a:hover{
+    color:#ff0000;
+    cursor:pointer;
+    text-decoration:underline;
+}
+
+.pagination ul {
+    display:inline-block;
+    *display:inline;
+    margin-bottom:0;
+    margin-left:0;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+    *zoom:1;
+    -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.05);
+    -moz-box-shadow:0 1px 2px rgba(0,0,0,0.05);
+    box-shadow:0 1px 2px rgba(0,0,0,0.05)
+}
+.pagination ul>li {
+    display:inline
+}
+.pagination ul>li>a,.pagination ul>li>span {
+    float:left;
+    padding:0 14px;
+    line-height:38px;
+    text-decoration:none;
+    background-color:#fff;
+    border:1px solid #ddd;
+    border-left-width:0
+}
+.pagination ul>li>a:hover,.pagination ul>.active>a,.pagination ul>.active>span {
+    background-color:#f5f5f5
+}
+.pagination ul>.active>a,.pagination ul>.active>span {
+    color:#999;
+    cursor:default
+}
+.pagination ul>.disabled>span,.pagination ul>.disabled>a,.pagination ul>.disabled>a:hover {
+    color:#999;
+    cursor:default;
+    background-color:transparent
+}
+.pagination ul>li:first-child>a,.pagination ul>li:first-child>span {
+    border-left-width:1px;
+    -webkit-border-radius:3px 0 0 3px;
+    -moz-border-radius:3px 0 0 3px;
+    border-radius:3px 0 0 3px
+}
+.pagination ul>li:last-child>a,.pagination ul>li:last-child>span {
+    -webkit-border-radius:0 3px 3px 0;
+    -moz-border-radius:0 3px 3px 0;
+    border-radius:0 3px 3px 0
+}
+.pagination-centered {
+    text-align:center
+}
+.pagination-right {
+    text-align:right
 }
