在换页的组件中通过判断条目的总数和  当前页面的设定的数目来判断是否会出现换页的工具条

--- a/web/module/Cms/src/Cms/Component/Article/ListControl/Template/Style1.phtml
+++ b/web/module/Cms/src/Cms/Component/Article/ListControl/Template/Style1.phtml
@@ -15,6 +15,9 @@
 	<?php endif;?>
 </ul><!-- article-list-ul end -->
 
+<?php if($this->paginator->getTotalItemCount()>$this->paginator->getItemCountPerPage()):?>
+
+
 <?php echo $this->paginationcontrol($this->paginator,'Sliding',$this->partial);?>
 
 <script type="text/javascript">
@@ -43,3 +46,4 @@
     
 </script>
 </div><!-- article-list-control end -->
+<?php endif;?>
