--- a/web/module/Cms/src/Cms/Component/Article/ListControl/Template/ajax-paginator.phtml
+++ b/web/module/Cms/src/Cms/Component/Article/ListControl/Template/ajax-paginator.phtml
@@ -41,7 +41,7 @@
                 </li>
             <?php else: ?>
                 <li class="disabled">
-                    <a href="javascript:;" > &gt;&gt; </a>
+                    <a href="javascript:;" > >> </a>
 				</li>
                 <li class="disabled">
                     <a href="javascript:;">尾页</a>
