更改联系电话和电子邮箱

--- a/web/module/Web/view/web/common/layout.phtml
+++ b/web/module/Web/view/web/common/layout.phtml
@@ -29,7 +29,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td valign='top'><div id='SidebarActivity'></div></td>
+		<td valign='top'><div id='SidebarEmail'></div></td>
 	</tr>
 </table>
 
